<?xml version="1.0"?>
<package>
  <name>pr2_pick</name>
  <version>0.0.0</version>
  <description>Amazon picking challenge metapackage.</description>
  <maintainer email="amazonpickingchallenge@cs.washington.edu">UW Amazon Picking Challenge Team</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
    <metapackage/>
  </export>
</package>
