<?xml version="1.0"?>
<package>
  <name>pr2_pick</name>
  <version>0.0.0</version>
  <description>Amazon picking challenge metapackage.</description>
  <maintainer email="amazonpickingchallenge@cs.washington.edu">UW Amazon Picking Challenge Team</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>festival_tts</run_depend>
  <run_depend>joint_states_listener</run_depend>
  <run_depend>pr2_ethercat_drivers</run_depend>
  <run_depend>pr2_pick_contest</run_depend>
  <run_depend>pr2_pick_main</run_depend>
  <run_depend>pr2_pick_manipulation</run_depend>
  <run_depend>pr2_pick_msgs</run_depend>
  <run_depend>pr2_pick_perception</run_depend>
  <run_depend>pr2_pretouch_optical_dist</run_depend>
  <run_depend>trajopt_test</run_depend>
  <export>
    <metapackage/>
  </export>
</package>