<?xml version="1.0"?>
<package>
  <name>push_pull</name>
  <version>0.0.0</version>
  <description>Amazon picking challenge metapackage.</description>
  <maintainer email="sksellio@cs.washington.edu">Sarah Elliott</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>festival_tts</run_depend>
  <run_depend>joint_states_listener</run_depend>
  <run_depend>pr2_ethercat_drivers</run_depend>
  <run_depend>pr2_pick_contest</run_depend>
  <run_depend>pr2_pick_main</run_depend>
  <run_depend>pr2_pick_manipulation</run_depend>
  <run_depend>pr2_pick_msgs</run_depend>
  <run_depend>pr2_pick_perception</run_depend>
  <run_depend>pr2_grasp_evaluator</run_depend>
  <run_depend>trajopt_test</run_depend>
  <export>
    <metapackage/>
  </export>
</package>
