<package>
  <name>ap_msgs</name>
  <version>0.0.1</version>
  <description>ap_msgs</description>
  <maintainer email="puiglm@gmail.com">Luis</maintainer>

  <license>BSD</license>

  <author>Luis</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>geometry_msgs</build_depend>


  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>


</package>
