<package>
  <name>multisense</name>
  <version>0.0.1</version>
  <description>multisense</description>
  <maintainer email="puiglm@gmail.com">Luis</maintainer>

  <license>BSD</license>


  <author>Luis</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>laser_assembler</build_depend>
  <build_depend>ap_msgs</build_depend>
  <build_depend>adaptive_perception_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>pcl</build_depend>
  <build_depend>pcl_ros</build_depend>
  
 <build_depend>cmake_modules</build_depend>
     
  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>laser_assembler</run_depend>
  <run_depend>ap_msgs</run_depend>
  <run_depend>adaptive_perception_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>pcl</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>trooper_common</run_depend>


</package>
