<package>
  <name>adaptive_perception_msgs</name>
  <version>0.0.1</version>
  <description>adaptive_perception_msgs</description>
  <maintainer email="puiglm@gmail.com">Luis</maintainer>

  <license>BSD</license>
  <author>Luis</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>ap_msgs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>ap_msgs</run_depend>


  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  
</package>
